--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-6">
             <div class="card mb-3">
                 <img src="<%= campground.image %>" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -24,5 +24,38 @@
                     </form>
                 </div>
             </div>
+            <!--REVIEWS FORM-->
+
+        </div>
+        <div class="col-6">
+            <h2>Leave a Review</h2>
+            <form action="/campgrounds/<%= campground.id %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
+                <div class="mb-3">
+                    <label for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea required class="form-control" name="review[body]" id="" cols="30" rows="3"></textarea>
+                    <div class="valid-feedback">Looks great!</div>
+                    <div class="invalid-feedback">Please provide a written review!</div>
+                </div>
+                <button class="btn btn-success">Add Review</button>
+            </form>
+            <% for( let review of campground.reviews ) { %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            Rating: <%= review.rating %>
+                        </h5>
+                        <p class="card-text">
+                            Review: <%= review.body %>
+                        </p>
+                        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
