--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,8 +1,9 @@
 <% layout('layouts/boilerplate')%>
+    <link rel="stylesheet" href="/stylesheets/images.css" class="rel">
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required>
@@ -14,12 +15,6 @@
                     <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required>
                     <div class="valid-feedback">Looks great!</div>
                     <div class="invalid-feedback">Where is your campground, REALLY?</div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground.image %>" required>
-                    <div class="valid-feedback">Looks great!</div>
-                    <div class="invalid-feedback">Let's see a real picture!</div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
@@ -35,6 +30,23 @@
                     <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea>
                     <div class="valid-feedback">Looks great!</div>
                     <div class="invalid-feedback">Update the description, please!</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Images</label>
+                    <div class="form-file custom-file">
+                        <input class="form-control custom-file-input" type="file" id="image" name="image" multiple onchange="previewMultiple(event)">
+                        <label for="image" class="form-label custom-file-label"></label>
+                    </div>
+                    <div id="formFile"></div>
+                </div>
+                <div class="mb-3">
+                    <% campground.images.forEach(function(img, i) { %>
+                        <img src="<%= img.thumbnail %> " class="img-thumbnail" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%=img.filename%>">
+                        </div>
+                        <label for="image-<%= i %>">Delete?</label>
+                        <% }) %>
                 </div>
                 <div class="mb-3"><button class="btn btn-info">Update Campground</button></div>
             </form>
