--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,9 @@
 <% layout('layouts/boilerplate')%>
+    <link rel="stylesheet" href="/stylesheets/images.css" class="rel">
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST" novalidate class="validated-form">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -15,12 +16,9 @@
                     <div class="valid-feedback">Looks great!</div>
                     <div class="invalid-feedback">Where is your campground?</div>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" required>
-                    <div class="valid-feedback">Looks great!</div>
-                    <div class="invalid-feedback">We need a picture!</div>
-                </div>
+
+
+
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
                     <div class="input-group">
@@ -35,6 +33,14 @@
                     <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
                     <div class="valid-feedback">Looks great!</div>
                     <div class="invalid-feedback">Tell us about it!</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Images</label>
+                    <div class="form-file custom-file">
+                        <input class="form-control custom-file-input" type="file" id="image" name="image" multiple onchange="previewMultiple(event)">
+                        <label for="image" class="form-label custom-file-label"></label>
+                    </div>
+                    <div id="formFile"></div>
                 </div>
                 <div class="mb-3"><button class="btn btn-success">Add Campground</button></div>
             </form>
