--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,14 +1,19 @@
 <% layout('layouts/boilerplate')%>
+    <div id="cluster-map"></div>
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
     </div>
     <ul>
         <% for (let campground of campgrounds) { %>
-            <div class="card" mb-3>
+            <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
+                        <% if(campground.images.length) { %>
+                            <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
+                            <% } else {%>
+                                <img class="img-fluid" src="https://res.cloudinary.com/dktwpnsqc/image/upload/v1647741112/YelpCamp/txb72jonv7j99if2xinh.jpg" alt="">
+                                <% } %>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -30,3 +35,10 @@
             </div>
             <% } %>
     </ul>
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+        const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+    </script>
+
+
+    <script src="javascripts/clusterMap.js"></script>
