--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate')%>
     <link rel="stylesheet" href="/stylesheets/stars.css">
 
+
     <div class="row">
         <div class="col-6">
             <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -56,6 +57,7 @@
 
         </div>
         <div class="col-6">
+            <div id='map'></div>
             <% if (currentUser) { %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%= campground.id %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
@@ -103,3 +105,8 @@
                         <% } %>
         </div>
     </div>
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+        const campground = <%- JSON.stringify(campground) %> //this line must be saved without autoformatting.  The dash moves!
+    </script>
+    <script src="/javascripts/showPageMap.js"></script>
